fix visible bug in order page

--- a/silkroad-frontend-react/src/pages/User/Orders/Orders.module.scss
+++ b/silkroad-frontend-react/src/pages/User/Orders/Orders.module.scss
@@ -26,7 +26,7 @@ $color-item-chose: #70f7da;
 
 .carouselContainer {
   // 文字會失真不知道怎麼處理
-  // perspective: 4000px;
+  perspective: 8000px;
   width: 100vw;
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
@@ -37,6 +37,7 @@ $color-item-chose: #70f7da;
   margin-bottom: 20px;
   position: relative;
   z-index: 1;
+  // overflow: hidden;
 }
 
 .carousel {
